--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Programming.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.json-simple-1.1.1.jar=../../json-simple-1.1.1.jar
+file.reference.twitter4j-core-3.0.3.jar=../../twitter4j-core-3.0.3.jar
+file.reference.WebServices.jar=/Users/sbroad/WebServices.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.twitter4j-core-3.0.3.jar}:\
+    ${file.reference.WebServices.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
