--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,9 @@ file.reference.WebServices.jar=/Users/sbroad/WebServices.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.WebServices.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.twitter4j-core-3.0.3.jar}:\
-    ${file.reference.WebServices.jar}
+    ${file.reference.twitter4j-core-3.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
