Ignore the apikey.txt

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-simple-1.1.1.jar=../../json-simple-1.1.1.jar
 file.reference.twitter4j-core-3.0.3.jar=../../twitter4j-core-3.0.3.jar
-file.reference.WebServices.jar=/Users/sbroad/WebServices.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.WebServices.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.twitter4j-core-3.0.3.jar}
+    ${file.reference.twitter4j-core-3.0.3.jar}:\
+    ${reference.WebServices.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,6 +63,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.WebServices=../wsWrappers
+reference.WebServices.jar=${project.WebServices}/dist/WebServices.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
